@@ -1,3 +1,10 @@
+2007-06-15  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-play.c:
+	* src/sj-extracting.c:
+	Set the label manually to force atk to update. Very sick but it
+	works. (#364371, thanks Patrick Wade).
+
 2007-06-03  Ross Burton  <ross@burtonini.com>
 
 	* src/sound-juicer.h:
